# tinyjson

./: .gitignore  10.11.99.1.json  CMakeLists.txt  README.md  cstream.c  cstream.h  json.c  main.c  parser.c  parser.h  test.c  test.json  tinyjson.c  tinyjson.h  tstream.c  tstream.h
src/: tinyjson.c  tinyjson.h
test/: CMakeLists.txt  primitives.c
